<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ui.RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginStart="@dimen/_110sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/logo"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/background_edit_text"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_5sdp"
        android:textColorHint="@color/gray" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/register_email"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/background_edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/_5sdp"
        android:textColorHint="@color/gray" />

    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/register_password"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/background_edit_text"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="@dimen/_5sdp"
        android:textColorHint="@color/gray" />

    <EditText
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/register_confirm_password"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/background_edit_text"
        android:hint="@string/user_name"
        android:padding="@dimen/_5sdp"
        android:textColorHint="@color/gray" />

    <EditText
        android:id="@+id/register_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/register_name"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/background_edit_text"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:padding="@dimen/_5sdp"
        android:textColorHint="@color/gray" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_phone"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/background_button"
        android:textColor="@color/white"
        android:text="@string/registration" />
</RelativeLayout>