<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ui.UpdateAccountActivity">

    <include
        android:id="@+id/update_header"
        layout="@layout/header" />

    <TextView
        android:id="@+id/university_tv"
        style="@style/font_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_header"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/university" />


    <Spinner
        android:id="@+id/university_sp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@+id/university_tv"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        />

    <TextView
        android:id="@+id/degree_tv"
        style="@style/font_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/university_sp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/Degree" />

    <Spinner
        android:id="@+id/degree_sp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@+id/degree_tv"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_10sdp" />

    <TextView
        android:id="@+id/specialization_tv"
        style="@style/font_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/degree_sp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/Specialization" />

    <Spinner
        android:id="@+id/specialization_sp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@+id/specialization_tv"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_10sdp" />

    <TextView
        android:id="@+id/skills_tv"
        style="@style/font_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/specialization_sp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/skills" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/skills_rc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/skills_tv"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="horizontal"
        tools:listitem="@layout/item_tag"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <TextView
        android:id="@+id/clickSkill"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/background_edit_text"
        android:layout_below="@+id/skills_rc"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        >

    </TextView>
    <!--
    <Spinner
        android:id="@+id/skills_sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skills_rc"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_10sdp" />
-->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/update_profile_action"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_below="@id/clickSkill"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/background_button"
        android:gravity="center"
        android:text="@string/submit_Applicant"
        android:textColor="@color/white" />

</RelativeLayout>